--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "app:build:production"
+              "browserTarget": "app:build:production" ,
+              "proxyConfig": "proxy.conf.json"
             },
             "ci": {
               "progress": false
