--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^5.0.0",
     "jalali-moment": "^3.3.8",
     "moment-jalaali": "^0.9.2",
+    "ngx-persian-pipe": "^0.1.7",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
